@startuml

title __PLAYER_HANDS's Class Diagram__\n

  namespace client.gui {
    namespace view {
      namespace javafx_controllers {
        namespace in_game {
          namespace components {
            namespace card_spaces {
              namespace player_hands {
                abstract class client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.CardHand {
                    # cards : AbstractCardDTO[]
                    # duration : Duration
                    # hiddenFraction : Double
                    # mainPane : HBox
                    # transitions : TranslateTransition[]
                    # weaponControllers : GeneralWeapon[]
                    {static} - FXML : String
                    + deselectAll()
                    + getCardNodes()
                    + getCards()
                    + getNode()
                    + initialize()
                    + setPlayer()
                    # CardHand()
                    # appear()
                    # setCards()
                    - disappear()
                }
              }
            }
          }
        }
      }
    }
  }
  

  namespace client.gui {
    namespace view {
      namespace javafx_controllers {
        namespace in_game {
          namespace components {
            namespace card_spaces {
              namespace player_hands {
                class client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.PowerUpHand {
                    + PowerUpHand()
                    + getCards()
                    + setCards()
                    # appear()
                }
              }
            }
          }
        }
      }
    }
  }
  

  namespace client.gui {
    namespace view {
      namespace javafx_controllers {
        namespace in_game {
          namespace components {
            namespace card_spaces {
              namespace player_hands {
                class client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.WeaponHand {
                    + WeaponHand()
                    + setCards()
                    # appear()
                }
              }
            }
          }
        }
      }
    }
  }
  

  client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.CardHand o-- common.remote_interfaces.RemotePlayer : player
  client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.CardHand o-- common.enums.PcColourEnum : playerColor
  client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.PowerUpHand -up-|> client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.CardHand
  client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.WeaponHand -up-|> client.gui.view.javafx_controllers.in_game.components.card_spaces.player_hands.CardHand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
